--- a/back-gess/.env.example
+++ b/back-gess/.env.example
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=back_siagc
+DB_DATABASE=back_gess
 DB_USERNAME=root
 DB_PASSWORD=
 
