--- a/back-gess/composer.json
+++ b/back-gess/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/passport": "^12.0",
+        "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
